--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel": "^4.7.16",
     "chai": "^2.2.0",
     "dirty-chai": "^1.2.0",
+    "event-to-promise": "^0.3.2",
     "leche": "^2.1.1",
     "mocha": "^2.2.1",
     "sinon": "^1.14.1"
