--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "event-to-promise": "^0.3.2",
     "mocha": "*",
     "sinon": "^1.14.1",
+    "source-map-support": "*",
     "standard": "*"
   },
   "scripts": {
