Minor build updates.

--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
   },
   "scripts": {
     "build": "mkdir --parents dist && babel --optional=runtime --compact=true --source-maps --out-dir=dist/ src/",
-    "dev": "mkdir --parents dist && babel --watch --optional=runtime --compact=true --source-maps --out-dir=dist/ src/",
+    "dev": "mkdir --parents dist && babel --watch --optional=runtime --source-maps --out-dir=dist/ src/",
     "prepublish": "npm run build",
-    "test": "standard && npm run build && mocha 'dist/**/*.spec.js'",
+    "test": "standard && mocha 'dist/**/*.spec.js'",
     "test-dev": "standard && mocha --watch --reporter=min 'dist/**/*.spec.js'"
   },
   "standard": {
