Remove standard from `npm test`.
Currently broken du to due to eslint/espree#123

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "build": "mkdir -p dist && babel --optional=runtime --compact=true --source-maps --out-dir=dist/ src/",
     "dev": "mkdir -p dist && babel --watch --optional=runtime --source-maps --out-dir=dist/ src/",
     "prepublish": "npm run build",
-    "test": "standard && mocha 'dist/**/*.spec.js'",
-    "test-dev": "standard && mocha --watch --reporter=min 'dist/**/*.spec.js'"
+    "test": "mocha 'dist/**/*.spec.js'",
+    "test-dev": "mocha --watch --reporter=min 'dist/**/*.spec.js'"
   },
   "standard": {
     "ignore": [
