--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "babel-runtime": "^5.6.11",
+    "kindof": "^2.0.0",
     "lodash.bind": "^3.1.0",
     "lodash.callback": "^3.3.0",
     "lodash.foreach": "^3.0.3",
