chore(package): update all dependencies

--- a/package.json
+++ b/package.json
@@ -21,44 +21,67 @@
     "dist/",
     "*.js"
   ],
+  "engines": {
+    "node": ">=4"
+  },
   "dependencies": {
-    "babel-runtime": "^5.6.11",
+    "babel-runtime": "^6.18.0",
     "kindof": "^2.0.0",
-    "lodash.bind": "^3.1.0",
-    "lodash.callback": "^3.3.0",
-    "lodash.foreach": "^3.0.3",
+    "lodash": "^3.10.1",
     "make-error": "^1.0.2"
   },
   "devDependencies": {
-    "babel": "^5.6.11",
-    "babel-eslint": "^4.1.3",
-    "clarify": "^1.0.5",
-    "event-to-promise": "^0.3.2",
-    "ghooks": "^0.3.2",
-    "mocha": "^2.2.5",
-    "must": "^0.12.0",
+    "babel-cli": "^6.18.0",
+    "babel-eslint": "^7.1.0",
+    "babel-plugin-lodash": "^3.2.9",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "clarify": "^2.0.0",
+    "cross-env": "^3.1.3",
+    "dependency-check": "^2.6.0",
+    "event-to-promise": "^0.7.0",
+    "ghooks": "^1.3.2",
+    "mocha": "^3.1.2",
+    "must": "^0.13.2",
+    "rimraf": "^2.4.3",
     "sinon": "^1.14.1",
-    "source-map-support": "^0.3.2",
-    "standard": "^5.3.1",
-    "trace": "^1.2.0"
+    "source-map-support": "^0.4.6",
+    "standard": "^8.5.0",
+    "trace": "^2.3.3"
   },
   "scripts": {
-    "build": "babel --source-maps --out-dir=dist/ src/",
-    "dev": "babel --watch --source-maps --out-dir=dist/ src/",
+    "build": "cross-env NODE_ENV=production babel --source-maps --out-dir=dist/ src/",
+    "clean": "rimraf dist/",
+    "depcheck": "dependency-check ./package.json --entry dist/collection.js index.js unique-index.js view.js",
+    "dev": "cross-env NODE_ENV=development babel --watch --source-maps --out-dir=dist/ src/",
     "lint": "standard",
+    "posttest": "npm run lint && npm run depcheck",
+    "prebuild": "npm run clean",
+    "predev": "npm run clean",
     "prepublish": "npm run build",
     "test": "npm run lint && mocha --opts .mocha.opts \"dist/**/*.spec.js\"",
     "test-dev": "mocha --opts .mocha.opts --watch --reporter=min \"dist/**/*.spec.js\""
   },
+  "babel": {
+    "plugins": [
+      "lodash",
+      "transform-runtime"
+    ],
+    "presets": [
+      "latest",
+      "stage-0"
+    ]
+  },
   "standard": {
     "ignore": [
-      "dist/**"
+      "dist"
     ],
     "parser": "babel-eslint"
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm test"
+      "commit-msg": "npm test"
     }
   }
 }
